demochat-sample/deploy/mongo/kube-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demochat-master
  name: demochat-master
spec:
  type: NodePort
  ports:
  - name: "http"
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    service: demochat-board
