demochat-sample/deploy/mongo/mongo-ingress.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo
  name: mongo
spec:
  type: NodePort
  ports:
  - name: "http"
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    service: mongo
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mongo
spec:
  backend:
    serviceName: mongo
    servicePort: 27017
